# libproj

./: .gitignore  CMakeLists.txt  msg_buf.h  utility.h
daemon/: CMakeLists.txt  daemon.c
libproj/: CMakeLists.txt  buf_queue.c  buf_queue.h  iofcn.c  iofcn.h  libproj.c  logger.c  logger.h  memfcn.c  memfcn.h  msg_buf.c  msg_buf.h  shared_buf.c  shared_buf.h  utility.h
testproj/: CMakeLists.txt  testproj.c
